syntax = "proto3";
package rfqs;

option go_package = "github.com/mbizmarket/dmp/radiance/proto/pb/rfqs";

import "google/protobuf/timestamp.proto";

message Rfqs{
    int64 ID = 1;
    int64 TransactionId = 2;
    int64 RequestedBy = 3;
    int64 CreatedBy = 4;

    int32 PaymentType = 6;
    int64 PaymentDuration = 7;

    int64 CompanyBuyerId = 8;
    int64 CompanySellerId = 9;

    string RfqNo = 10;
    string ReferenceNo = 11;    
    string Notes = 12;
    string NoteForSeller = 13; 

    float SubTotal = 14;
    float TaxBasis = 15;
    float Ppn = 16;
    float Pph = 17;  
    float Rounding = 18;  
    float GrandTotal = 19;

    int32 Status = 20;
    string StatusReason = 21;

    google.protobuf.Timestamp ExpiredAt = 22;
    google.protobuf.Timestamp CreatedAt = 23;
    google.protobuf.Timestamp UpdatedAt = 24;
    google.protobuf.Timestamp DeletedAt = 25;
}

message RespData {
    repeated Rfqs Data = 1;
}

message Req {
    int64 ID = 1;
}

service AghanimServices {
    rpc GetRfqsByUser (Req) returns (RespData) {}
}